# chanterelle-ai

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
app-specs/: component-diagram.txt  main.md  old_notes.md  plan.md  services.md
app-specs/contracts/: artifact-contract.md  connection-contract.md  execution-request-contract.md  policy-contract.md  runtime-contract.md  skill-contract.md  topic-contract.md  workflow-contract.md
db/: init.sql
docs/: dev-status.md  notes.md  project-overview.md  system-overview.md
manual-tests/: mvp-smoke.md  read_parquet.ipynb  retention-phase6.md
scripts/: migrate_phase2.py  migrate_phase3.py  migrate_phase4.py  migrate_phase5.py  migrate_phase6.py  migrate_phase7.py  migrate_phase8.py  migrate_workflow_audit.py  mvp_smoke.py  seed.py
services/agent/: app.py  audit.py  orchestrator.py  session.py
services/agent/llm/: base.py  claude.py
services/agent/tools/: check_job.py  inspect_artifact.py  pin_artifact.py  python_transform.py  skill_guidance.py  sql_query.py  unpin_artifact.py
services/artifact/: app.py  catalog.py  store.py
services/execution/: app.py  manager.py
services/python_runtime/: app.py  executor.py
services/sql_runtime/: app.py  executor.py
shared/: db.py  settings.py
shared/contracts/: __init__.py  artifact.py  audit.py  connection.py  execution.py  job.py  policy.py  runtime.py  skill.py  topic.py  workflow.py
